src/styles/Container.module.css
.Container {
    display: flex;
    flex-direction: column;
    grid-auto-rows: max-content;
    overflow: hidden;
    box-sizing: border-box;
    appearance: none;
    outline: none;
    border-radius: 5px;
    transition: background-color 350ms ease;
    background-color: var(--container-bg-color2);
    border: 1px solid rgba(0, 0, 0, 0.05);
    font-size: 1em;
    min-height: 500px;
}
/* tailwind sm */
@media (min-width: 768px) {
    .Container:not(:last-child) {
        margin-bottom: 2.5rem;
    }
}

.Container ul {
    list-style: none;
    padding: 15px;
    margin: 0;
}
.Container ul li:not(:first-child) {
    margin: 15px 0px 0px 0px;
}
.Container.scrollable ul {
    overflow-y: auto;
}
.Container.hover {
    background-color: #ebebeb;
}
.Container.unstyled {
    overflow: visible;
    background-color: transparent !important;
    border: none !important;
}
.Container.horizontal {
    width: 100%;
}
.Container.horizontal ul {
    grid-auto-flow: column;
}
.Container.shadow {
    box-shadow: 0 1px 10px 0 rgba(34, 33, 81, 0.1);
}
.Container:focus-visible {
    border-color: transparent;
    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0), 0 0px 0px 2px #4c9ffe;
}
.Header {
    display: flex;
    padding: 5px 20px;
    padding-right: 8px;
    align-items: center;
    justify-content: space-between;
    background-color: var(--container-bg-color);
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
}
.Header:hover .Actions > * {
    opacity: 1 !important;
}
.Actions {
    display: flex;
}
.Actions > *:first-child:not(:last-child) {
    opacity: 0;
}
.Actions > *:first-child:not(:last-child):focus-visible {
    opacity: 1;
}

